<resources>
    <string name="app_name">InventoryApp</string>
    <string name="delete_all_items">Delete All Items</string>
    <string name="all_items_deleted_toast">All Items Deleted</string>
    <string name="dummy_data_toast">Dummy Data Inserted</string>
    <string name="insert_dummy_data">Insert Dummy Data</string>
    <string name="currency_symbol">€</string>
    <string name="quantity">Quantity:</string>
    <string name="supplier">Supplier:</string>
    <string name="all_items_deleted">All items deleted</string>
    <string name="delete_all">Delete All Items</string>
    <string name="item_quantity">Item Quantity</string>
    <string name="item_name">Item Name</string>
    <string name="item_supplier">Item Supplier</string>
    <string name="item_description">Item Description</string>
    <string name="description">Description:</string>
    <string name="item">Item:</string>
    <string name="save">Save</string>
    <string name="item_saved">Item Saved</string>
    <string name="error_insert_item">Error inserting item</string>
    <string name="error_update_item">Error updating item</string>
    <string name="update_item_success">Item update Successful</string>
    <string name="new_item_add">New item added</string>
    <string name="update_item">Update item</string>
    <string name="add_item">Add item</string>
    <string name="delete_item">Delete item</string>
    <string name="price">Price:</string>
    <string name="unsaved_dialog">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="items_deleted">Item deleted</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="item_delete_failed">Item delete failed!</string>
    <string name="item_delete_successful">Item delete successful</string>
    <string name="empty_fields">There are empty fields!</string>
    <string name="order_more">Order More</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="order">Order</string>
    <string name="email_i_want">I want to order</string>
    <string name="email_this_item">of this item</string>
    <string name="item_sold">Item Sold</string>
</resources>
