<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.inventoryapp.EditorActivity">

    <TextView
        android:id="@+id/item_text_view"
        style="@style/editor_text_view"
        android:text="@string/item" />

    <EditText
        android:id="@+id/name_edit_view"
        style="@style/editor_edit_view"
        android:layout_below="@id/item_text_view"
        android:hint="@string/item_name"
        android:inputType="textCapCharacters" />

    <ImageView
        android:id="@+id/item_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/item_text_view"
        android:layout_marginEnd="24dp"
        android:cropToPadding="true"
        android:scaleType="centerCrop"
        android:padding="32dp"
        android:src="@drawable/camera" />

    <TextView
        android:id="@+id/price_text_view"
        style="@style/editor_text_view"
        android:layout_below="@id/name_edit_view"
        android:text="@string/price" />

    <LinearLayout
        android:id="@+id/price_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/price_text_view"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/price_edit_view"
            style="@style/editor_edit_view"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currency_symbol"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/quantity_text_view"
        style="@style/editor_text_view"
        android:layout_below="@id/price_view"
        android:text="@string/quantity" />

    <EditText
        android:id="@+id/quantity_edit_view"
        style="@style/editor_edit_view"
        android:layout_below="@id/quantity_text_view"
        android:hint="@string/item_quantity"
        android:inputType="number" />

    <TextView
        android:id="@+id/supplier_text_view"
        style="@style/editor_text_view"
        android:layout_below="@id/quantity_edit_view"
        android:text="@string/supplier" />

    <EditText
        android:id="@+id/supplier_edit_view"
        style="@style/editor_edit_view"
        android:layout_below="@id/supplier_text_view"
        android:hint="@string/item_supplier"
        android:inputType="textCapCharacters" />

    <TextView
        android:id="@+id/description_text_view"
        style="@style/editor_text_view"
        android:layout_below="@id/supplier_edit_view"
        android:text="@string/description" />

    <EditText
        android:id="@+id/description_edit_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/description_text_view"
        android:layout_margin="8dp"
        android:hint="@string/item_description" />

    <Button
        android:id="@+id/order_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/supplier_text_view"
        android:layout_marginEnd="@dimen/order_margin_end"
        android:text="@string/order_more" />

    <LinearLayout
        android:id="@+id/order_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/order_button"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/order_margin_end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/minus"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"

            android:text="@string/minus" />

        <TextView
            android:id="@+id/counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:layout_marginTop="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:textSize="24sp" />

        <Button
            android:id="@+id/plus"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:text="@string/plus"
            android:layout_marginEnd="8dp"/>

    </LinearLayout>


</RelativeLayout>
